MicroService/UAT/domiruth-aks-ingress-basic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: domiruth-uat-aks-ingress-basic
  namespace: domiruth-uat-aks-ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - secretName: domiruth-uat-aks-ingress-basic-tls
  rules:
  - http:
      paths:
      - backend:
          serviceName: security
          servicePort: 80
        path: /security/(.*)
      - backend:
          serviceName: policy
          servicePort: 80
        path: /policy/(.*)
      - backend:
          serviceName: custom
          servicePort: 80
        path: /custom/(.*)
      - backend:
          serviceName: notify
          servicePort: 80
        path: /notify/(.*)
      - backend:
          serviceName: flights
          servicePort: 80
        path: /flights/(.*)
      - backend:
          serviceName: hotel
          servicePort: 80
        path: /hotel/(.*)
      - backend:
          serviceName: vacation
          servicePort: 80
        path: /vacation/(.*)
      - backend:
          serviceName: aks-helloworld
          servicePort: 80
        path: /(.*)
      - backend:
          serviceName: payement
          servicePort: 80
        path: /payement/(.*)
      - backend:
          serviceName: visa
          servicePort: 80
        path: /visa/(.*)
      - backend:
          serviceName: cars
          servicePort: 80
        path: /cars/(.*)
